# rekomenda

./: .gitignore  .harper-dictionary.txt  LICENSE  README.md  get-data.sh  practical-1.ipynb  practical-2.ipynb  pyproject.toml
.zed/: settings.json
examples/: quickstart.py
notebooks/: practical-1.ipynb  practical-2.ipynb  practical-3.ipynb  practical-4.ipynb  testing-model.ipynb
report/: .latexmkrc  example_paper.bib  icml2023.sty  main.aux  main.fdb_latexmk  main.fls  main.synctex(busy)  main.tex
src/rekomenda/: __init__.py  als.py  analyser.py  coo.py  csc.py  csr.py  utils.py
