[project]
name = "rekomenda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdulrasheed Fawole", email = "fawomath@gmail.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy<2.4.0",
    "numba>=0.63.1",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.ruff]
exclude = ["*.ipynb"]
